syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "sep3.project.protobuf";
option java_outer_classname = "UserProto";

message UserData{
  string username = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string email = 5;
  string role = 6;
}

message UserParticipant{
  string firstName = 1;
  string lastName = 2;
  optional string role = 3;
  string username = 4;
  optional string email = 5;
}

message RequestCreateUser{
  UserData user = 1;
}
message ResponseCreateUser{
  UserData user = 1;
}

message RequestDeleteUser{
  string username = 1;
}
message ResponseDeleteUser{
  string result = 1;
}
message ResponseUserGetAllUsers{
  repeated UserData users = 1;
}
message RequestUserGetByUsername{
  string username = 1;
}
message ResponseUserGetByUsername{
  UserData user = 1;
}
service UserService{
  rpc createUser(RequestCreateUser) returns (ResponseCreateUser);
  rpc getAllUsers(google.protobuf.Empty) returns (ResponseUserGetAllUsers);
  rpc getUserByUsername(RequestUserGetByUsername) returns (ResponseUserGetByUsername);
  rpc deleteUser(RequestDeleteUser) returns (ResponseDeleteUser);
}




