var searchData=
[
  ['feedback_0',['feedback',['../classg_r_p_c_client_1_1_request_add_feedback.html#a4df8e48ad213b35b8db92b32857aa9ee',1,'gRPCClient.RequestAddFeedback.Feedback'],['../classg_r_p_c_client_1_1_response_get_feedback.html#a0827ee3fa04cc212f0d66b964ffa3d64',1,'gRPCClient.ResponseGetFeedback.Feedback'],['../classg_r_p_c_client_1_1_response_add_feedback.html#ade7340c693175d51b108a97021e9e7b2',1,'gRPCClient.ResponseAddFeedback.Feedback'],['../classg_r_p_c_client_1_1_hand_in_homework.html#abe0d02c4f15b1b07ba469a26927b2217',1,'gRPCClient.HandInHomework.Feedback'],['../class_domain_1_1_models_1_1_hand_in_homework.html#a0cf80b194f6bf9650c39df9b74bedc6c',1,'Domain.Models.HandInHomework.Feedback']]],
  ['feedbackid_1',['FeedbackId',['../classg_r_p_c_client_1_1_request_get_feedback_by_id.html#a2829c13a6901984fc6d6dbc80bfd8cb0',1,'gRPCClient::RequestGetFeedbackById']]],
  ['firstname_2',['firstname',['../classg_r_p_c_client_1_1_user_data.html#a03f02efc4144f8d82466c7c4a4f8880e',1,'gRPCClient.UserData.FirstName'],['../classg_r_p_c_client_1_1_user_participant.html#a40fd085dc03aaed83793cc2c1aca7a1b',1,'gRPCClient.UserParticipant.FirstName'],['../class_domain_1_1_d_t_os_1_1_user_d_t_o_1_1_user_attendance_d_t_o.html#a33c98c74a382ace4184c1cbcb98cba5b',1,'Domain.DTOs.UserDTO.UserAttendanceDTO.FirstName'],['../class_domain_1_1_d_t_os_1_1_user_d_t_o_1_1_user_creation_d_t_o.html#a1e7642852f3cce43e2bacc5d03b6871a',1,'Domain.DTOs.UserDTO.UserCreationDTO.FirstName'],['../class_domain_1_1_models_1_1_user.html#a536804280c283d20c0c9877d55c510c5',1,'Domain.Models.User.FirstName']]]
];
