var searchData=
[
  ['feedbackfieldnumber_0',['feedbackfieldnumber',['../classg_r_p_c_client_1_1_request_add_feedback.html#a215623f98bf7556e77dc86896ea14c96',1,'gRPCClient.RequestAddFeedback.FeedbackFieldNumber'],['../classg_r_p_c_client_1_1_response_get_feedback.html#a593ee411b25b2ef5cfafb3cc0f85a155',1,'gRPCClient.ResponseGetFeedback.FeedbackFieldNumber'],['../classg_r_p_c_client_1_1_response_add_feedback.html#a8bf39e74ff61d070b8938b9a88392382',1,'gRPCClient.ResponseAddFeedback.FeedbackFieldNumber'],['../classg_r_p_c_client_1_1_hand_in_homework.html#a27d5aeda278bbe77f348280b050eae76',1,'gRPCClient.HandInHomework.FeedbackFieldNumber']]],
  ['feedbackidfieldnumber_1',['FeedbackIdFieldNumber',['../classg_r_p_c_client_1_1_request_get_feedback_by_id.html#a6cdc8636b6beca224a3667dbdf26f95c',1,'gRPCClient::RequestGetFeedbackById']]],
  ['firstnamefieldnumber_2',['firstnamefieldnumber',['../classg_r_p_c_client_1_1_user_data.html#a4a2353541e2cb844983c10b7871b01bc',1,'gRPCClient.UserData.FirstNameFieldNumber'],['../classg_r_p_c_client_1_1_user_participant.html#a2a99ef99c1b438a63ceeaeb83ebff4c7',1,'gRPCClient.UserParticipant.FirstNameFieldNumber']]]
];
